// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sales-stack Global should generate the correct global api gateway 1`] = `
Object {
  "SalesAPI40AE10D2": Object {
    "Properties": Object {
      "Description": "Global version of the Sales API",
      "Name": "sales-api",
    },
    "Type": "AWS::ApiGateway::RestApi",
  },
}
`;

exports[`sales-stack Global should generate the correct global lambdas 1`] = `
Object {
  "GetSalesD8890AF0": Object {
    "DependsOn": Array [
      "GetSalesServiceRole776C3A71",
    ],
    "Properties": Object {
      "Code": Object {
        "S3Bucket": Object {
          "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
        },
        "S3Key": Any<String>,
      },
      "Description": "Global version of the getSalesLambdaProps handler",
      "Environment": Object {
        "Variables": Object {
          "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          "LOCALE": "global",
        },
      },
      "FunctionName": "getSalesLambda",
      "Handler": "index.handler",
      "MemorySize": 512,
      "Role": Object {
        "Fn::GetAtt": Array [
          "GetSalesServiceRole776C3A71",
          "Arn",
        ],
      },
      "Runtime": "nodejs14.x",
    },
    "Type": "AWS::Lambda::Function",
  },
}
`;

exports[`sales-stack Global should generate the correct global lambdas 2`] = `
Object {
  "CreateSale7BE4C0B2": Object {
    "DependsOn": Array [
      "CreateSaleServiceRole2ACD756A",
    ],
    "Properties": Object {
      "Code": Object {
        "S3Bucket": Object {
          "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
        },
        "S3Key": Any<String>,
      },
      "Description": "Global version of the createSaleLambdaProps handler",
      "Environment": Object {
        "Variables": Object {
          "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          "LOCALE": "global",
        },
      },
      "FunctionName": "createSaleLambda",
      "Handler": "index.handler",
      "MemorySize": 512,
      "Role": Object {
        "Fn::GetAtt": Array [
          "CreateSaleServiceRole2ACD756A",
          "Arn",
        ],
      },
      "Runtime": "nodejs14.x",
    },
    "Type": "AWS::Lambda::Function",
  },
}
`;

exports[`sales-stack UK should generate the correct UK api gateway 1`] = `
Object {
  "SalesAPI40AE10D2": Object {
    "Properties": Object {
      "Description": "UK version of the Sales API",
      "Name": "sales-api",
    },
    "Type": "AWS::ApiGateway::RestApi",
  },
}
`;

exports[`sales-stack UK should generate the correct UK lambdas 1`] = `
Object {
  "GetSalesD8890AF0": Object {
    "DependsOn": Array [
      "GetSalesServiceRole776C3A71",
    ],
    "Properties": Object {
      "Code": Object {
        "S3Bucket": Object {
          "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
        },
        "S3Key": Any<String>,
      },
      "Description": "UK version of the getSalesLambdaProps handler",
      "Environment": Object {
        "Variables": Object {
          "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          "LOCALE": "uk",
        },
      },
      "FunctionName": "getSalesLambda",
      "Handler": "index.handler",
      "MemorySize": 1024,
      "Role": Object {
        "Fn::GetAtt": Array [
          "GetSalesServiceRole776C3A71",
          "Arn",
        ],
      },
      "Runtime": "nodejs14.x",
    },
    "Type": "AWS::Lambda::Function",
  },
}
`;

exports[`sales-stack UK should generate the correct UK lambdas 2`] = `
Object {
  "CreateSale7BE4C0B2": Object {
    "DependsOn": Array [
      "CreateSaleServiceRole2ACD756A",
    ],
    "Properties": Object {
      "Code": Object {
        "S3Bucket": Object {
          "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
        },
        "S3Key": Any<String>,
      },
      "Description": "UK version of the createSaleLambdaProps handler",
      "Environment": Object {
        "Variables": Object {
          "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          "LOCALE": "uk",
        },
      },
      "FunctionName": "createSaleLambda",
      "Handler": "index.handler",
      "MemorySize": 512,
      "Role": Object {
        "Fn::GetAtt": Array [
          "CreateSaleServiceRole2ACD756A",
          "Arn",
        ],
      },
      "Runtime": "nodejs14.x",
    },
    "Type": "AWS::Lambda::Function",
  },
}
`;
